--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,9 +77,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: ProximaNova
+    - family: Nunito
       fonts:
-        - asset: fonts/proxima-nova.otf
+        - asset: fonts/nunito.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
