--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.14.0
   easy_search_bar: ^2.5.0
   dropdown_search: ^5.0.6
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/gifs/
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -81,7 +83,9 @@ flutter:
   fonts:
     - family: Nunito
       fonts:
-        - asset: fonts/nunito.ttf
+        - asset: fonts/nunito_bold.ttf
+          weight: 700
+        - asset: fonts/nunito_semibold.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
