--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   easy_search_bar: ^2.5.0
   dropdown_search: ^5.0.6
   geolocator: ^9.0.2
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
