--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dropdown_search: ^5.0.6
   geolocator: ^9.0.2
   http: ^1.0.0
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
   assets:
     - assets/images/
     - assets/gifs/
+    - assets/icons/
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
