--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^9.0.2
   http: ^1.0.0
   flutter_svg: ^2.0.7
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
